--- a/photo.html
+++ b/photo.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Photos</title>
+            <link rel="stylesheet" href="design.css"/>
 </head>
 <body>
     <h1>CROISSANT</h1>
-    <h2>
+    <div class="bread">
     <img src="pic.jpg" alt="croissant" class="img fluid w-50 b-1"/>
-</h2>
+    </div>
     <a href="index.html">Homepage</a>
     <a href="contact.html">Contact me</a>
 </body>
